<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModScreen">


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_below="@+id/txt_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="107dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/mod_se"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/textView7"
        >


        <Button
            android:id="@+id/btn_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:padding="30dp"
            android:layout_marginBottom="17dp"
            android:textSize="20sp"
            android:text="@string/btn_time" />

        <Button
            android:id="@+id/btn_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:padding="30dp"
            android:text="@string/btn_free"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:textSize="20sp"
            android:text="@string/btn_hard" />
    </LinearLayout>

</RelativeLayout>