<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreScreen">


    <TextView
        android:id="@+id/txt_finish_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="187dp"
        android:padding="40dp"
        android:text="@string/btn_restart"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_section"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_restart"
        android:layout_alignParentStart="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="-120dp"
        android:padding="40dp"
        android:text="@string/btn_section"
        android:textSize="15sp" />

</RelativeLayout>