<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/text_view"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/lbl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="226dp"
        android:ems="10"
        android:hint="@string/lbl_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="164dp" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="214dp"
        android:layout_marginLeft="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lbl_name"
        android:layout_marginBottom="-135dp"
        android:paddingBottom="20dp"
        android:text="@string/btn_start"
        android:textAlignment="center"
        android:textSize="20sp" />



</RelativeLayout>